<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".AssemblerActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/uOttawaLogoLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="StoreKeeper Panel"
                android:textColor="#060606"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/uOttawaLogoRight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="end" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/configuraImage"
        android:layout_width="396dp"
        android:layout_height="164dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/configura"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBanner" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configuraImage">

        <Button
            android:id="@+id/sendToAddItemLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4F4F4F"
            android:padding="16dp"
            android:text="Add Item"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/modifyRemoveDescriptionItemInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#000000"
            android:hint="Enter Item's Descriptive Title"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/errorTextSubtypeItemInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/viewItemInformationsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4F4F4F"
            android:padding="16dp"
            android:text="View Item Informations"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />



        <Button
            android:id="@+id/sendToModifyRemoveItemLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4F4F4F"
            android:padding="16dp"
            android:text="Modify/Detele Item"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/sendToTabularList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4F4F4F"
            android:padding="16dp"
            android:text="Tabular List"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF6347"
        android:padding="16dp"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
        app:layout_constraintVertical_bias="0.512" />

</androidx.constraintlayout.widget.ConstraintLayout>
