...
                    android:text="-"
                    android:padding="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/incrementButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_marginStart="4dp"
                    android:backgroundTint="#040404"
                    android:text="+"
...

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Return Button at the Bottom -->
    <Button
        android:id="@+id/returnButtonModifyRemoveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        android:backgroundTint="#FF6347"
        android:textColor="@android:color/white"
        android:padding="16dp"
...
