...

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bottom Return Button -->
    <Button
        android:id="@+id/returnButtonItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FF6347"
        android:padding="16dp"
        android:text="Return"
...
